@@ -246,11 +246,11 @@ Collection.prototype.insertAll = function insertAll (docs, options, callback) {
   // Insert options (flags for insert)
   var insertFlags = {};
   // If we have a mongodb version >= 1.9.1 support keepGoing attribute
-  if(this.db.versionAsNumber >= 191) {
+  // if(this.db.versionAsNumber >= 191) {
     if(options['keepGoing'] != null) {
       insertFlags['keepGoing'] = options['keepGoing'];
     }
-  }
+  // }
     
   // Pass in options
   var insertCommand = new InsertCommand(
@@ -786,7 +786,7 @@ Collection.prototype.findOne = function findOne (queryObject, options, callback)
       return callback(self.db.wrap(result));
     }
 
-    callback(err, result && result.documents && result.documents[0]);
+    callback(err, result && result.documents && result.documents.length > 0 ? result.documents[0] : null);
   });
 };
 
@@ -872,13 +872,14 @@ Collection.prototype.mapReduce = function mapReduce (map, reduce, options, callb
   if ('function' === typeof options) callback = options, options = {};
 
   // Set default to be inline if we are dealing with a v 1.7.6 > server
-  var version = 'string' === typeof this.db.version
-    ? parseInt(this.db.version.replace(/\./g, ''))
-    : 0;
-
-  if (version > 0 && version > 176) {
+  // var version = 'string' === typeof this.db.version
+  //   ? parseInt(this.db.version.replace(/\./g, ''))
+  //   : 0;
+  // 
+  // if (version > 0 && version > 176) {    
+    // Set default to inline
     if (null == options.out) options.out = 'inline';
-  }
+  // }
 
   if ('function' === typeof map) {
     map = map.toString();
