@@ -262,7 +262,7 @@ ReplSetServers.prototype.connect = function(parent, callback) {
       // Create db command and Add the callback to the list of callbacks by the request id (mapping outgoing messages to correct callbacks)
       var db_command = DbCommand.createIsMasterCommand(parent);
       parent.on(db_command.getRequestId().toString(), connectCallback);
-      parent.notReplied[db_command.getRequestId().toString()] = this;
+      parent.notReplied[db_command.getRequestId().toString()] = new Date().getTime();
 
       // Let's send a request to identify the state of the server
       this.send(db_command);
@@ -273,7 +273,7 @@ ReplSetServers.prototype.connect = function(parent, callback) {
         // Emit error if there is one
         reply.responseHasError ? parent.emit(reply.responseTo.toString(), reply.documents[0], reply) : parent.emit(reply.responseTo.toString(), null, reply);
         // Remove the listener
-        if(parent.notReplied [reply.responseTo.toString()]) {
+        if(parent.notReplied[reply.responseTo.toString()]) {
          delete parent.notReplied[reply.responseTo.toString()];
          parent.removeListener(reply.responseTo.toString(), parent.listeners(reply.responseTo.toString())[0]);
         }
@@ -305,13 +305,19 @@ ReplSetServers.prototype.connect = function(parent, callback) {
     });
 
     // Emit timeout and close events so the client using db can figure do proper error handling (emit contains the connection that triggered the event)
-    server.connection.on("timeout", function() { parent.emit("timeout", replSetSelf); });
+    server.connection.on("timeout", function() { 
+      // Emit timeout message
+      parent.emit("timeout", replSetSelf); 
+    });
+    
     server.connection.on("close", function() {
       if (++replSetSelf.closedConnectionCount === replSetSelf.servers.length) {
+        // Fire close event
         parent.emit("close", replSetSelf);
         // Call any callback registered in the close() method.
-        if (replSetSelf.closeCallback)
-          replSetSelf.closeCallback();
+        if(replSetSelf.closeCallback) {
+          replSetSelf.closeCallback();          
+        }
       }
     });
     // Open the connection
