@@ -68,14 +68,14 @@ Server.prototype.connect = function(parent, callback) {
         parent.state = 'connected';
         // 
         // Call the server version function via admin to adapt to changes from 1.7.6 >
-        var admindb = parent.admin()
-        admindb.serverInfo(function(err, doc) {
-          if(err != null) return callback(err, null);
-          // Store the db version
-          parent.version = doc.version;
-          parent.versionAsNumber = parseInt(doc.version.replace(/\./g, ""));
+        // var admindb = parent.admin()
+        // admindb.serverInfo(function(err, doc) {
+        //   if(err != null) return callback(err, null);
+        //   // Store the db version
+        //   parent.version = doc.version;
+        //   parent.versionAsNumber = parseInt(doc.version.replace(/\./g, ""));
           callback(null, parent);
-        });
+        // });
       } else {
         callback("connection already opened");
       }
@@ -85,7 +85,7 @@ Server.prototype.connect = function(parent, callback) {
     var db_command = DbCommand.createIsMasterCommand(parent);
     // Add listeners
     parent.on(db_command.getRequestId().toString(), connectCallback);
-    parent.notReplied[db_command.getRequestId().toString()] = this;	
+    parent.notReplied[db_command.getRequestId().toString()] = new Date().getTime();
     
     // Let's send a request to identify the state of the server
     this.send(db_command);
@@ -115,9 +115,15 @@ Server.prototype.connect = function(parent, callback) {
   });
   
   // Emit timeout and close events so the client using db can figure do proper error handling (emit contains the connection that triggered the event)
-  server.connection.on("timeout", function() { parent.emit("timeout", this); });
+  server.connection.on("timeout", function() { 
+    // Emit timeout error
+    parent.emit("timeout", this); 
+  });
+  
   server.connection.on("close", function() { 
+    // Connection is done
     server.connected = false;    
+    // Emit close event
     parent.emit("close", this); 
   });
   // Open the connection
